--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ mockk = "1.13.10"
 datastore = "1.1.1"
 image-cropper = "4.5.0"
 navigation = "2.7.7"
+glide = "4.16.0"
 
 # coroutines
 coroutines = "1.7.3"
@@ -38,6 +39,9 @@ google-play-services-auth = "21.2.0"
 # network
 okhttp = "4.12.0"
 retrofit = "2.11.0"
+
+# paging
+paging = "3.3.0"
 
 [libraries]
 # test
@@ -66,6 +70,8 @@ datastore-core = { group = "androidx.datastore", name = "datastore-preferences-c
 image-cropper = { module = "com.vanniktech:android-image-cropper", version.ref = "image-cropper" }
 androidx-navigation-fragemnt = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigation" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigation" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+paging-runtime-ktx = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "paging" }
 
 # kakao
 kakao-user = { group = "com.kakao.sdk", name = "v2-user", version.ref = "kakao-user" }
@@ -85,7 +91,7 @@ okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-i
 
 [bundles]
 kotlin = ["lifecycle-runtime-ktx", "lifecycle-extensions", "coroutines-core"]
-android = ["androidx-constraintlayout", "androidx-activity", "androidx-appcompat", "androidx-core-ktx", "material", "image-cropper"]
+android = ["androidx-constraintlayout", "androidx-activity", "androidx-appcompat", "androidx-core-ktx", "material", "image-cropper", "glide", "paging-runtime-ktx"]
 navigation = ["androidx-navigation-fragemnt", "androidx-navigation-ui"]
 google = ["google-services", "firebase-auth", "firebase-messaging", "firebase-bom", "google-auth"]
 kakao = ["kakao-user", "kakao-map"]
