--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -3,9 +3,9 @@ name: Android Pull Request CI
 on:
   pull_request:
     branches: [ test ]
-#    paths:
-#      - 'android/**'
-#
+    paths:
+      - 'android/**'
+
 defaults:
   run:
     working-directory: ./android
