chore: branches develop으로 설정

--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -2,7 +2,7 @@ name: Android Pull Request CI
 
 on:
   pull_request:
-    branches: [ test ]
+    branches: [ develop ]
     paths:
       - 'android/**'
 
