--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -3,8 +3,8 @@ name: Android Pull Request CI
 on:
   pull_request:
     branches: [ develop ]
-    paths:
-      - 'android/**'
+#    paths:
+#      - 'android/**'
 
 defaults:
   run:
