--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -6,9 +6,9 @@ on:
 #    paths:
 #      - 'android/**'
 
-defaults:
-  run:
-    working-directory: ./android
+#defaults:
+#  run:
+#    working-directory: ./android
 
 jobs:
   unit_test:
