chore: 트리거, 경로 수정

--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -3,12 +3,12 @@ name: Android Pull Request CI
 on:
   pull_request:
     branches: [ develop ]
-#    paths:
-#      - 'android/**'
+    paths:
+      - 'android/**'
 
-#defaults:
-#  run:
-#    working-directory: ./android
+defaults:
+  run:
+    working-directory: ./android
 
 jobs:
   unit_test:
