chore: local properties 주석 해제

--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -43,10 +43,10 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run unit tests
-#        env:
-#          LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }}
+        env:
+          LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }}
         run: |
-#          echo "$LOCAL_PROPERTIES" > local.properties
+          echo "$LOCAL_PROPERTIES" > local.properties
           ./gradlew testDebugUnitTest --stacktrace
 
       - name: Publish Test Results
