--- a/android/gradle/libs.versions.toml
+++ b/android/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ junit-jupiter = "5.10.2"
 assertj-core = "3.25.3"
 kotest-runner-junit5 = "5.8.0"
 mockk = "1.13.10"
+ktlint = "12.1.0"
 
 # android-library
 datastore = "1.1.1"
@@ -89,6 +90,9 @@ retrofit-core = { group = "com.squareup.retrofit2", name = "retrofit", version.r
 okhttp-core = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 okhttp-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
 
+#ktlint
+ktlint-gradle = { module = "org.jlleitschuh.gradle:ktlint-gradle", version.ref = "ktlint" }
+
 [bundles]
 kotlin = ["lifecycle-runtime-ktx", "lifecycle-extensions", "coroutines-core"]
 android = ["androidx-constraintlayout", "androidx-activity", "androidx-appcompat", "androidx-core-ktx", "material", "image-cropper", "glide", "paging-runtime-ktx"]
@@ -103,3 +107,4 @@ test = ["junit", "junit-jupiter", "assertj", "kotest", "mockk"]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+ktlint = { id = "org.jlleitschuh.gradle.ktlint", version.ref = "ktlint" }
