--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.register.RegisterActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
