chore: ci pull_request_target으로 변경

--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -1,9 +1,7 @@
 name: Android Pull Request CI
 
 on:
-  push:
-    branches: [ develop ]
-  pull_request:
+  pull_request_target:
     branches: [ develop ]
     paths:
       - 'android/**'
