--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -1,6 +1,10 @@
 name: Android Pull Request CI
 
 on:
+  push:
+    branches: [ develop ]
+    paths:
+      - 'android/**'
   pull_request_target:
     branches: [ develop ]
     paths:
