chore: ci pull_request_target 설정

--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -5,7 +5,8 @@ on:
     branches: [ develop ]
     paths:
       - 'android/**'
-  pull_request:
+  pull_request_target:
+    types: [ opened ]
     branches: [ develop ]
     paths:
       - 'android/**'
