--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -5,8 +5,7 @@ on:
     branches: [ develop ]
     paths:
       - 'android/**'
-  pull_request_target:
-    types: [ opened ]
+  pull_request:
     branches: [ develop ]
     paths:
       - 'android/**'
