--- a/.github/workflows/android-pull-request-ci.yml
+++ b/.github/workflows/android-pull-request-ci.yml
@@ -3,6 +3,8 @@ name: Android Pull Request CI
 on:
   push:
     branches: [ develop ]
+    paths:
+      - 'android/**'
   pull_request:
     branches: [ develop ]
     paths:
@@ -57,14 +59,36 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Create local.properties
+        env:
+          LOCAL_PROPERTIES: ${{ secrets.LOCAL_PROPERTIES }}
+        run: |
+          echo "$LOCAL_PROPERTIES" > local.properties
+
+      - name: Create google-services.json
+        env:
+          GOOGLE_SERVICES_JSON: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: |
+          touch ../android/app/google-services.json
+          echo GOOGLE_SERVICES_JSON >> ../android/app/google-services.json
+          cat ../android/app/google-services.json
+
       - name: Lint Check
         run: ./gradlew ktlintCheck
 
       - name: Upload Event File
         uses: actions/upload-artifact@v3
         with:
-            name: Event File
-            path: ${{ github.event_path }}
+          name: Event File
+          path: ${{ github.event_path }}
+
+      - name: Create file
+        run: cat /home/runner/work/2024-friendogly/2024-friendogly/android/app/google-services.json | base64
+
+      - name: Putting data
+        env:
+          DATA: ${{ secrets.GOOGLE_SERVICES_JSON }}
+        run: echo $DATA > /home/runner/work/2024-friendogly/2024-friendogly/android/app/google-services.json
 
       - name: Run unit tests
         run: ./gradlew testDebugUnitTest --stacktrace
@@ -73,5 +97,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v3
         with:
-            name: Test Results
-            path: "**/test-results/**/*.xml"
+          name: Test Results
+          path: "**/test-results/**/*.xml"
