--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -5,8 +5,8 @@ on:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
-    paths:
-     - 'backend/**'
+    # paths:
+    #  - 'backend/**'
 
 defaults:
   run:
