--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -44,6 +44,9 @@ jobs:
         with:
           gradle-version: 8.1.1
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
@@ -55,7 +58,6 @@ jobs:
 
 
       - name: 실패 테스트결과의 원인을 Report 합니다
-
         uses: mikepenz/action-junit-report@v3
         if: always()
         with:
