--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -54,12 +54,12 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
         with:
-          files: './build/test-results/test/TEST-*.xml'
+          files: "**/test-results/**/*.xml"
 
 
       - name: 실패 테스트결과의 원인을 Report 합니다
         uses: mikepenz/action-junit-report@v3
         if: always()
         with:
-          report_paths: ./build/test-results/**/*.xml
+          report_paths: "**/test-results/**/*.xml"
           token: ${{ github.token }}
