chore: backend폴더에 대한 수정만 트리거 되도록 수정

--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -3,10 +3,12 @@ name: backend-ci
 on:
   push:
     branches: [ "develop" ]
+    paths:
+     - 'backend/**'
   pull_request:
     branches: [ "develop" ]
-    # paths:
-    #  - 'backend/**'
+    paths:
+     - 'backend/**'
 
 defaults:
   run:
