chore: 모든 폴더에 대해 트리거 적용

--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -3,12 +3,12 @@ name: deploy
 on:
   push:
     branches: ['develop']
-    paths:
-     - 'backend/**'
+    # paths:
+    #  - 'backend/**'
   pull_request:
     branches: ['develop']
-    paths:
-     - 'backend/**'
+    # paths:
+    #  - 'backend/**'
 
 
 jobs:
