--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -10,6 +10,9 @@ on:
     # paths:
     #  - 'backend/**'
 
+defaults:
+  run:
+   working-directory: ./backend
 
 jobs:
   build:
@@ -25,6 +28,14 @@ jobs:
           java-version: '17'
           distribution: 'corretto'
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+        with:
+          gradle-version: 8.1.1
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+        
       - name: Build project using Gradle
         run: ./gradlew clean bootJar
 
