chore: artifact 저장

--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -52,6 +52,12 @@ jobs:
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: friendogly-be-develop-jar
+          path: ./backend/build/libs/friendogly-0.0.1-SNAPSHOT.jar
+
       - name: 테스트 결과를 PR에 코멘트로 등록합니다
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
