--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -2,11 +2,11 @@ name: deploy
 
 on:
   push:
-    branches: ['develop']
+    branches: ['develop12']
     # paths:
     #  - 'backend/**'
   pull_request:
-    branches: ['develop']
+    branches: ['develop12']
     # paths:
     #  - 'backend/**'
 
