--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -40,16 +40,15 @@ jobs:
         run: ./gradlew build
 
       - name: 이동1
-        run: cd build/libs
-        
-      - name: 보기1
-        run: ls
+        run: |
+          cd build/libs
+          ls
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
         with:
           name: friendogly-be-develop-jar
-          path: ./build/libs/friendogly-0.0.1-SNAPSHOT.jar
+          path: ./**/friendogly-0.0.1-SNAPSHOT.jar
           
   deploy:
     needs: build
