chore: gradlew 권한 설정도 디렉토리설정

--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -30,6 +30,7 @@ jobs:
           gradle-version: 8.1.1
 
       - name: Grant execute permission for gradlew
+        working-directory: ./backend
         run: chmod +x gradlew
         
       - name: Build project using Gradle
