--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -48,12 +48,9 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
-      # # 처음 _work 폴더에 github actions 프로그램이 파일을 수정할 권한이 없어서, 권한을 부여해 주기 위한 작업입니다
-      # # 이 명령을 통해서 이미 있는 폴더에 git pull 을 사용할 수 있습니다
-      # - name: change permission
-      #   # 마지막 jwp-shopping-order 는 repository 이름입니다.
-      #   run: |
-      #     sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/jwp-shopping-order 
+      - name: change permission
+        run: |
+          sudo chown -R ubuntu:ubuntu /home/ubuntu/actions-runner/_work/2024-friendogly 
 
       - name: Download build artifact
         uses: actions/download-artifact@v3
