[BE] chore: CD 초기 구축 (#106)

--- a/.github/workflows/backend-pull-request-ci.yml
+++ b/.github/workflows/backend-pull-request-ci.yml
@@ -1,10 +1,6 @@
 name: backend-ci
 
 on:
-  push:
-    branches: [ "develop" ]
-    paths:
-     - 'backend/**'
   pull_request:
     branches: [ "develop" ]
     paths:
@@ -65,3 +61,8 @@ jobs:
         with:
           report_paths: './backend/build/test-results/test/TEST-*.xml'
           token: ${{ github.token }}
+
+      - name: Start server
+        run: |
+          sudo nohup java -jar build/libs/friendogly-0.0.1-SNAPSHOT.jar &
+          echo "Lastest Backend API Server started."
