--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -1,10 +1,11 @@
 name: deploy
 
 on:
+  pull_request:
+    branches: [ "develop","fix/be/swagger-connection" ]
   push:
     branches: ['develop']
-    paths:
-     - 'backend/**'
+     
 
 jobs:
   build:
