fix: build를 clean build로 수정

--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -32,7 +32,7 @@ jobs:
         
       - name: Build project using Gradle
         working-directory: ./backend
-        run: ./gradlew build
+        run: ./gradlew clean build
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
