--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -32,7 +32,7 @@ jobs:
         
       - name: Build project using Gradle
         working-directory: ./backend
-        run: ./gradlew clean build
+        run: ./gradlew bootJar
 
 
       - name: 디렉토리 경로 확인
@@ -42,6 +42,14 @@ jobs:
       - name: 파일 경로 찾기
         working-directory: ./backend
         run: find . -name "friendogly-0.0.1-SNAPSHOT.jar"
+
+      - name: 경로 이동
+        working-directory: ./backend
+        run: |
+          cd build/libs
+          pwd
+          ls
+          ls -l friendogly-0.0.1-SNAPSHOT.jar
         
       - name: Upload build artifact
         uses: actions/upload-artifact@v3
