--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         android:theme="@style/Theme.Friendogly"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-
         <activity
             android:name=".presentation.ui.profilesetting.ProfileSettingActivity"
             android:exported="false" />
@@ -38,6 +37,21 @@
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
             android:theme="@style/Theme.ImageCropper" />
+
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="oauth"
+                    android:scheme="@string/KAKAO_OAUTH_HOST" />
+            </intent-filter>
+        </activity>
 
     </application>
 
