feat: 목록 클릭시, 이동 구현

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="false" />
+        <activity android:name=".presentation.ui.chatlist.chat.ChatActivity"
+            android:exported="false"/>
         <activity
             android:name=".presentation.ui.register.RegisterActivity"
             android:exported="true">
