--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -58,6 +58,30 @@ jobs:
           echo "Listing all running processes..."
           ps aux
 
+      - name: Find Java Application PID
+        id: find_pid
+        run: |
+          echo "Finding Java application PID..."
+          PIDS=$(pgrep -f friendogly-0.0.1-SNAPSHOT.jar)
+          if [ -z "$PIDS" ]; then
+            echo "ERROR: Java application is not running."
+            exit 1
+          fi
+          echo "PIDS=$PIDS" >> $GITHUB_ENV
+
+      - name: Check ports for each PID
+        run: |
+          echo "Checking ports for PIDs..."
+          for PID in ${{ env.PIDS }}; do
+            echo "Checking PID $PID..."
+            PORTS=$(sudo lsof -Pan -p $PID -i | grep LISTEN | awk '{print $9}' | cut -d: -f2)
+            if [ -z "$PORTS" ]; then
+              echo "PID $PID: No ports found."
+            else
+              echo "PID $PID: Ports - $PORTS"
+            fi
+          done
+          
       - name: Check if room-esc server is running on port 8080
         id: check-server-on-port
         run: |
