--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -61,16 +61,7 @@ jobs:
       - name: Find Java Application PID
         id: find_pid
         run: |
-          pgrep -f friendogly-0.0.1-SNAPSHOT.jar
-          lsof -Pan -p 20012 | grep LISTEN
-          lsof -Pan -p 20013 | grep LISTEN
-          lsof -Pan -p 20014 | grep LISTEN
-          
-      - name: Find Java Application PID
-        run: |
-          lsof -Pan -p 20012 | grep LISTEN
-          lsof -Pan -p 20013 | grep LISTEN
-          lsof -Pan -p 20014 | grep LISTEN
+          pgrep -f friendogly-0.0.1-SNAPSHOT.jar | xargs kill -9
           
       - name: Check if room-esc server is running on port 8080
         id: check-server-on-port
