--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Find Java Application PID
         id: find_pid
         run: |
-          sudo pgrep -f friendogly-0.0.1-SNAPSHOT.jar | xargs sudo kill -9
+          sudo pgrep -f friendogly-0.0.1-SNAPSHOT.jar | xargs sudo kill -9 | true
           
       - name: Check if room-esc server is running on port 8080
         id: check-server-on-port
