chore: jar파일 실행전에 jar파일생성된 시간 출력

--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -71,5 +71,7 @@ jobs:
       - name: Start server
         run: |
           cd backend/build/libs
+          echo "File creation time(KR-09:00):"
+          ls -l --time=ctime friendogly-0.0.1-SNAPSHOT.jar
           sudo nohup java -jar friendogly-0.0.1-SNAPSHOT.jar &
           echo "start backend server"
