fix: backend패키지 변경사항에 대한 develop PUSH에만 트리거 되도록 수정

--- a/.github/workflows/backend-cd-workflow.yml
+++ b/.github/workflows/backend-cd-workflow.yml
@@ -1,10 +1,10 @@
 name: deploy
 
 on:
-  pull_request:
-    branches: [ "develop", "fix/be/swagger-connection" ]
   push:
     branches: ['develop']
+    paths: 
+      - 'backend/**'
      
 jobs:
   build:
