[AN] feat: 멍개 등록 UI,기능 구현 (#146)
Co-authored-by: 박예찬 <102402485+dpcks0509@users.noreply.github.com>

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.group.add.GroupAddActivity"
+            android:exported="false"/>
+        <activity
             android:name=".presentation.ui.profilesetting.ProfileSettingActivity"
             android:exported="false" />
         <activity
