feat: ec2에서 s3접근 테스트

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -65,6 +65,10 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     swaggerUI 'org.webjars:swagger-ui:4.11.1'
+
+    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.0.0")
+    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
+
 }
 
 tasks.withType(Test) {
