--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,7 +20,13 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.group.detail.GroupDetailActivity"
-            android:exported="false" />
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".presentation.ui.group.add.GroupAddActivity"
             android:exported="false" />
@@ -34,12 +40,7 @@
             android:exported="false"/>
         <activity
             android:name=".presentation.ui.register.RegisterActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            android:exported="false">
         </activity>
         <activity
             android:name="com.canhub.cropper.CropImageActivity"
