feat: 스플래시 및 자동 로그인 구현

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,18 +20,20 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.group.add.GroupAddActivity"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.profilesetting.ProfileSettingActivity"
             android:exported="false" />
         <activity
             android:name=".presentation.ui.MainActivity"
             android:exported="false" />
-        <activity android:name=".presentation.ui.chatlist.chat.ChatActivity"
-            android:exported="false"/>
+        <activity
+            android:name=".presentation.ui.chatlist.chat.ChatActivity"
+            android:exported="false" />
         <activity
             android:name=".presentation.ui.register.RegisterActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.Friendogly.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
